--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "chart.js": "^4.4.5",
+    "formik": "^2.4.6",
+    "lottie-react": "^2.4.0",
+    "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
+    "sass": "^1.80.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "22.7.7",
+    "@types/react": "18.3.11",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.6.3"
   }
 }
